--- a/FarmProduct.Web/FarmProduct.Web.csproj
+++ b/FarmProduct.Web/FarmProduct.Web.csproj
@@ -90,13 +90,17 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Extensions\CompanyEditModelExtension.cs" />
+    <Compile Include="Extensions\EnumExtension.cs" />
+    <Compile Include="Extensions\UserEditModelExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CompanyEditModel.cs" />
+    <Compile Include="Models\ErrorModel.cs" />
     <Compile Include="Models\ListViewModel.cs" />
     <Compile Include="Models\LogOnModel.cs" />
+    <Compile Include="Models\UserEditModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -202,19 +206,16 @@
     <Content Include="Views\Company\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Province\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Province\Create.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\City\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Company\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\User\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
