--- a/FarmProduct.Web/FarmProduct.Web.csproj
+++ b/FarmProduct.Web/FarmProduct.Web.csproj
@@ -63,6 +63,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CompanyType.cs" />
+    <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\Utilts.cs" />
     <Compile Include="Common\UserAuthorizeAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs">
@@ -86,10 +88,12 @@
     <Compile Include="Controllers\UserController.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controllers\WholeSaleProductController.cs" />
     <Compile Include="Extensions\AgriculturalProductEditModelExtension.cs" />
     <Compile Include="Extensions\CompanyEditModelExtension.cs" />
     <Compile Include="Extensions\EnumExtension.cs" />
     <Compile Include="Extensions\UserEditModelExtension.cs" />
+    <Compile Include="Extensions\WholeProductEditModelExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -97,9 +101,11 @@
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CompanyEditModel.cs" />
     <Compile Include="Models\ErrorModel.cs" />
+    <Compile Include="Models\JsonResultModel.cs" />
     <Compile Include="Models\ListViewModel.cs" />
     <Compile Include="Models\LogOnModel.cs" />
     <Compile Include="Models\UserEditModel.cs" />
+    <Compile Include="Models\WholeSaleProductEditModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -235,6 +241,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\AgriculturalProduct\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\WholeSaleProduct\WholeSold.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\WholeSaleProduct\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\WholeSaleProduct\Detail.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\AgriculturalProduct\Detail.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\WholeSaleProduct\MyWholeSaleProduct.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
